syntax="proto3";

option go_package="/model";

message LoginValidationRequest{
    string username = 1;
    string email = 2;
    string password = 3;
    string salt = 4;
}

message LoginValidationResponse{
    bool isValidated = 1;
    string token = 2;
    string lastLogin = 3;
    string message = 4;
}
