syntax="proto3";

option go_package="/model";

message UserAddRequest{
    string fullname = 1;
    string email = 2;
    string phoneNumber = 3;
}

message UserAddResponse{
    string username = 1;
    string userId = 2;
}